# xy_configure

./: MANIFEST.in  README.md  pyproject.toml
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
test/: Admin.py  main.py  test.cfg  test.toml
xy_configure/: Configure.py
xy_configure/Format/: ConfigFormat.py
xy_configure/Pair/: Option.py  Pair.py  PairDelegate.py  Section.py
xy_configure/Raw/: Raw.py  __init__.py
xy_configure/Raw/Format/: Ini.py  Json.py  Toml.py  Xml.py
xy_configure/configparser/: ConfigParser.py
